Fixed spacing on the radios in edit button for employee

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -442,3 +442,13 @@ ListItem {
     margin-top: 300px !important;
 
 }
+
+.status-container {
+    margin-top: 5px !important;
+    margin-bottom: 5px !important;
+}
+
+.status-radio {
+    margin-right: 5px !important;
+    margin-bottom: 5px !important;
+}
